--- a/.github/workflows/target.yml
+++ b/.github/workflows/target.yml
@@ -3,12 +3,16 @@ name: Cleaner
 on:
   workflow_call:
     inputs:
-      account_id:
+      accounts:
         required: true
         type: string
 
+
 jobs:
-  triage:
+  account:
+    strategy:
+      matrix: 
+        account: ${{fromJSON(inputs.accounts)}}
     runs-on: ubuntu-latest
     steps:
-    - run: echo "${{ inputs.account_id }}"
+    - run: echo ${{ matrix.account }}
