--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -12,6 +12,10 @@ jobs:
       run:
         shell: bash
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
       - id: set-matrix
         run: echo "::set-output name=matrix::[10, 12, 14]"
       - uses: chiefus/gh-actions-matrix/.github/workflows/target.yml@main
