--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -18,7 +18,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
-      - id: set-matrix
+      - id: set-files
+       # run: echo "::set-output name=accounts::{\"accounts\":[10, 12, 14]}"
+        run: echo "files=file1 file2 file3" >> $GITHUB_OUTPUT
+      - id: set-accounts
        # run: echo "::set-output name=accounts::{\"accounts\":[10, 12, 14]}"
         run: echo "accounts={\"accounts\":[10, 12, 14]}" >> $GITHUB_OUTPUT
 
@@ -30,3 +33,13 @@ jobs:
       matrix: ${{fromJSON(needs.matrix.outputs.accounts)}}
     steps:
       - run: echo "${{ matrix.accounts }}"
+
+  matrix3:
+    needs: matrix2
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          for i in $(echo )echo "${{ needs.matrix.outputs.files }}"
+          do
+            echo $i
+          done
