--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -25,6 +25,8 @@ jobs:
       - id: set-accounts
        # run: echo "::set-output name=accounts::{\"accounts\":[10, 12, 14]}"
         run: echo "ACCOUNTS={\"accounts\":[10, 12, 14]}" >> $GITHUB_OUTPUT
+      - id: set-role
+        run: echo ${{ env.ACTION_AWS_IAM_ROLE }}
 
 
   matrix2:
